Further simplification of the menu and improved some guides.
Changed the menu sturcture of Develop and API reference to have less
and more clear categories. Splitted some parts into an extended guide
that is available under the Core Development category. Simplified some
guides and removed a few unimportant parts.

--- a/generator/template/events.twig
+++ b/generator/template/events.twig
@@ -1,7 +1,7 @@
 Events
 ==========
 
-This is a complete list of available hooks.
+This is a complete list of available hooks. If you are not familiar with this read our [Guide about events](/guides/events).
 
 {% set currentCategory = '' %}
 {% for hook in hooks if hook.name != '$eventName' %}
