Add seoTitle() method to Guide, and use it in guide.twig. Refs #104

--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -1,4 +1,4 @@
-{% if sectionTitle is defined %}{% set title = sectionTitle %}{% endif %}
+{% set title = guide.seoTitle %}
 {% set setPageHeader = false %}
 {% extends 'base.twig' %}
 
