save piwik version in the URL

--- a/app/templates/404.twig
+++ b/app/templates/404.twig
@@ -19,7 +19,7 @@
 
 {% block content %}
     <p>
-        <a href="/">Get back to the home page</a>
+        <a href="{{ '/'|completeUrl }}">Get back to the home page</a>
     </p>
 {% endblock %}
 
