--- a/app/templates/home.twig
+++ b/app/templates/home.twig
@@ -25,7 +25,7 @@
                         Track your application or access <br/> Piwik data using the HTTP API.
                     </p>
                     <p>
-                        <a class="btn btn-primary btn-lg" href="/integration">Integrate Piwik</a>
+                        <a class="btn btn-primary btn-lg" href="{{ '/integration'|completeUrl }}">Integrate Piwik</a>
                     </p>
                 </div>
                 <div class="col-sm-6">
@@ -36,7 +36,7 @@
                         Extend and customize Piwik by <br/> contributing or developing plugins.
                     </p>
                     <p>
-                        <a class="btn btn-primary btn-lg" href="/develop">Develop Piwik &amp; Plugins</a>
+                        <a class="btn btn-primary btn-lg" href="{{ '/develop'|completeUrl }}">Develop Piwik &amp; Plugins</a>
                     </p>
                 </div>
             </div>
@@ -50,7 +50,7 @@
         <div class="col-sm-6 col-md-4">
             <h2>
                 <span class="text-success">#</span>
-                <a href="/api-reference">API Reference</a>
+                <a href="{{ '/api-reference'|completeUrl }}">API Reference</a>
             </h2>
             <p>Check out the low-level documentation for the HTTP, Javascript or PHP API.</p>
         </div>
@@ -58,7 +58,7 @@
         <div class="col-sm-6 col-md-4">
             <h2>
                 <span class="text-success">#</span>
-                <a href="/changelog">Platform Changelog</a>
+                <a href="{{ '/changelog'|completeUrl }}">Platform Changelog</a>
             </h2>
             <p>What has changed in the latest Piwik versions for the developers.</p>
         </div>
@@ -66,7 +66,7 @@
         <div class="col-sm-6 col-md-4">
             <h2>
                 <span class="text-success">#</span>
-                <a href="/support">Community &amp; Support</a>
+                <a href="{{ '/support'|completeUrl }}">Community &amp; Support</a>
             </h2>
             <p>Get support or get involved with the developer community.</p>
         </div>
