--- a/app/templates/left-menu.twig
+++ b/app/templates/left-menu.twig
@@ -5,7 +5,7 @@
 
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a href="{{ category.url }}">
+                    <a href="{{ category.url|completeUrl }}">
                         {{ category.name }}
                     </a>
                 </h4>
@@ -17,7 +17,7 @@
                         {% set menuClass = (guide.title == item.menuTitle) ? 'active' : '' %}
                         <li class="{{ menuClass }}" title="{{ item.menuTitle|striptags|raw }}">
                             {% if item.menuUrl %}
-                                <a href="{{ item.menuUrl }}">{{ item.menuTitle|raw }}</a>
+                                <a href="{{ item.menuUrl|completeUrl }}">{{ item.menuTitle|raw }}</a>
                             {% else %}
                                 <span>{{ item.menuTitle|raw }}</span>
                             {% endif %}
@@ -26,7 +26,7 @@
                                 {% for subItem in item.subItems %}
                                     {% set menuClass = (guide.title == subItem.menuTitle) ? 'active' : '' %}
                                     <li class="{{ menuClass }}" title="{{ subItem.title|striptags|raw }}">
-                                        <a href="{{ subItem.menuUrl }}"> {{ subItem.menuTitle|raw }}</a>
+                                        <a href="{{ subItem.menuUrl|completeUrl }}"> {{ subItem.menuTitle|raw }}</a>
                                     </li>
                                 {% endfor %}
                             </ul>
