in 404 pages show a link if document is available for different piwik version

--- a/app/templates/404.twig
+++ b/app/templates/404.twig
@@ -18,7 +18,22 @@
 {% endblock %}
 
 {% block content %}
+    {% if alternativeUrls|length %}
+        <p>
+            <br />
+            Maybe you are looking for one of these resources:
+        </p>
+
+        <ul>
+            {% for alternativeUrl in alternativeUrls %}
+                <li><a href="{{ alternativeUrl }}">{{ alternativeUrl }}</a></li>
+            {% endfor %}
+        </ul>
+
+    {% endif %}
+
     <p>
+        <br />
         <a href="{{ '/'|completeUrl }}">Get back to the home page</a>
     </p>
 {% endblock %}
