--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -11,6 +11,11 @@
         </div>
 
         <div class="col-sm-8 col-md-9 documentation">
+            {% if urlIfAvailableInNewerVersion %}
+                <a href="{{ urlIfAvailableInNewerVersion }}">Click here if you want to read this article for the latest Piwik version</a>
+                <br />
+                <br />
+            {% endif %}
 
             {{ guide.renderedContent|raw }}
 
