skip menu items if no title is specified

--- a/app/templates/left-menu.twig
+++ b/app/templates/left-menu.twig
@@ -14,23 +14,27 @@
             <div class="panel-body bs-sidebar">
                 <ul class="nav nav-pills nav-stacked bs-sidenav">
                     {% for item in category.items %}
-                        {% set menuClass = (guide.title == item.menuTitle) ? 'active' : '' %}
-                        <li class="{{ menuClass }}" title="{{ item.menuTitle|striptags|raw }}">
-                            {% if item.menuUrl %}
-                                <a href="{{ item.menuUrl|completeUrl }}">{{ item.menuTitle|raw }}</a>
-                            {% else %}
-                                <span>{{ item.menuTitle|raw }}</span>
-                            {% endif %}
+                        {% if item.menuTitle %}
+                            {% set menuClass = (guide.title == item.menuTitle) ? 'active' : '' %}
+                            <li class="{{ menuClass }}" title="{{ item.menuTitle|striptags|raw }}">
+                                {% if item.menuUrl %}
+                                    <a href="{{ item.menuUrl|completeUrl }}">{{ item.menuTitle|raw }}</a>
+                                {% else %}
+                                    <span>{{ item.menuTitle|raw }}</span>
+                                {% endif %}
 
-                            <ul class="nav">
-                                {% for subItem in item.subItems %}
-                                    {% set menuClass = (guide.title == subItem.menuTitle) ? 'active' : '' %}
-                                    <li class="{{ menuClass }}" title="{{ subItem.title|striptags|raw }}">
-                                        <a href="{{ subItem.menuUrl|completeUrl }}"> {{ subItem.menuTitle|raw }}</a>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        </li>
+                                {% set subItems = item.subItems %}
+
+                                <ul class="nav">
+                                    {% for subItem in item.subItems %}
+                                        {% set menuClass = (guide.title == subItem.menuTitle) ? 'active' : '' %}
+                                        <li class="{{ menuClass }}" title="{{ subItem.title|striptags|raw }}">
+                                            <a href="{{ subItem.menuUrl|completeUrl }}"> {{ subItem.menuTitle|raw }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                        {% endif %}
                     {% endfor %}
                 </ul>
             </div>
