fix when switching piwik version from a guide

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -61,7 +61,7 @@
                                 class="piwik-version-select"
                                 name="piwik">
                             {% for i in availablePiwikVersions %}
-                                <option value="{% if i == latestPiwikDocsVersion %}/{% else %}{{ i }}.x{% endif %}"
+                                <option value="{% if i == latestPiwikDocsVersion %}/{% else %}/{{ i }}.x{% endif %}"
                                         {% if selectedPiwikVersion == i %}selected{% endif %}
                                 >Piwik {{ i }}.X</option>
                             {% endfor %}
