when selecting "3.X" load latest version of the page rather than homepage (#140)
* when selecting "3.X" load latest version of the page rather than homepage

* Make the selector in top right link to the current page rather than homepage

* Fix switching from 2.x to 3.x on home does not work

* set global variable in initView rather than renderGuide

*  404 pages within api-reference/ path should return  a 404 error

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -61,7 +61,8 @@
                                 class="piwik-version-select"
                                 name="piwik">
                             {% for i in availablePiwikVersions %}
-                                <option value="{% if i == latestPiwikDocsVersion %}/{% else %}/{{ i }}.x{% endif %}"
+
+                                <option value="{{ currentPath|completeUrlForPiwikVersion(i ~ '.x') }}"
                                         {% if selectedPiwikVersion == i %}selected{% endif %}
                                 >Piwik {{ i }}.X</option>
                             {% endfor %}
