Javascript to JavaScript

--- a/app/templates/home.twig
+++ b/app/templates/home.twig
@@ -52,7 +52,7 @@
                 <span class="text-success">#</span>
                 <a href="{{ '/api-reference'|completeUrl }}">API Reference</a>
             </h2>
-            <p>Check out the low-level documentation for the HTTP, Javascript or PHP API.</p>
+            <p>Check out the low-level documentation for the HTTP, JavaScript or PHP API.</p>
         </div>
 
         <div class="col-sm-6 col-md-4">
