Mark Copyright to make it clear content is not open source

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -95,7 +95,7 @@
     <footer>
         <div class="container">
             <p class="pull-left">
-                &copy; <a href="http://piwik.org">Piwik.org</a>
+                Copyright &copy; <a href="http://piwik.org">Piwik.org</a> 
                 |
                 <a href="https://twitter.com/piwik"><i class="fa fa-twitter"></i> Twitter</a>
                 |
