--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -7,17 +7,11 @@
     {% if urlIfAvailableInNewerVersion %}
         <link rel="canonical" href="https://{{ constant('DOCS_DOMAIN') }}{{ urlIfAvailableInNewerVersion }}">
     {% endif %}
-    <link href="/css/bootstrap.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
-    <link href="/css/font-awesome.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
-    <link href="/css/highlight.zenburn.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
-    <link href="/css/app.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
-    <link href="/css/sidebar.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
-    <link href="/css/documentation.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
+    <link href="/dist/css/style.css?{{ revision|e('html_attr') }}" rel="stylesheet">
     <!--[if lt IE 9]>
-    <script src="/js/html5shiv.3.7.0.js?{{ revision|e('html_attr') }}"></script>
-    <script src="/js/respond.min.1.3.0.js?{{ revision|e('html_attr') }}"></script>
-    <![endif]-->
-</head>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]--></head>
 <body>
 
 <div id="menu" class="navbar navbar-inverse navbar-fixed-top">
@@ -111,17 +105,14 @@
     </footer>
 {% endblock %}
 
-<script src="/js/jquery.js?{{ revision|e('html_attr') }}"></script>
-<script src="/js/bootstrap.min.js?{{ revision|e('html_attr') }}"></script>
-<script src="/js/bootstrap2-typeahead.js?{{ revision|e('html_attr') }}"></script>
-<script src="/js/app.js?{{ revision|e('html_attr') }}"></script>
-<script src="/js/highlight.8.2.min.js?{{ revision|e('html_attr') }}"></script>
+<script src="/dist/js/libraries.min.js?{{ revision|e('html_attr') }}"></script>
+<script src="/dist/js/app.min.js?{{ revision|e('html_attr') }}"></script>
 <script type="text/javascript">
 $(document).ready(function () {
     // Disable language auto-detect on code blocks that don't have a language
     // This prevents a messy highlighting when the block doesn't contain code
     $('pre code:not([class])').addClass('no-highlight hljs');
-    hljs.initHighlightingOnLoad();
+    hljs.initHighlighting();
 });
 </script>
 
