--- a/app/templates/home.twig
+++ b/app/templates/home.twig
@@ -3,14 +3,14 @@
 {% block headline %}
     <div class="jumbotron">
         <div class="container">
-            <h1>
+            <h1 class="display-4">
                 Code
                 <span class="text-muted">|</span>
                 Design
                 <span class="text-muted">|</span>
                 Innovate
             </h1>
-            <p>Welcome to the Piwik Developer Zone, the center of innovation in analytics.</p>
+            <p class="lead">Welcome to the Piwik Developer Zone, the center of innovation in analytics.</p>
         </div>
     </div>
 
