--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -55,7 +55,7 @@
                        data-action="{{ '/data/documents'|completeUrl }}"
                        autocomplete="off">
                 <select title="Select your Piwik version"
-                        class="piwik-version-select custom-selectX"
+                        class="piwik-version-select custom-select"
                         name="piwik">
                     {% for i in availablePiwikVersions %}
 
