--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -12,7 +12,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
 }
-code {
+code, a > code {
     color: #A93552;
     background-color: #f5f5f5;
     border-radius: 0;
@@ -44,10 +44,6 @@ p {
     #quick-search-typeahead > input {
         width:256px;
     }
-}
-
-.alert {
-    margin:15px 1.5em 0 1.5em;
 }
 
 .parameter > *:first-child {
