--- a/app/scss/sidebar.scss
+++ b/app/scss/sidebar.scss
@@ -25,7 +25,7 @@
 .card.bs-mainsidebar {
     border: 1px solid $darkgrey;
     box-shadow: 0 0 5px $darkgrey;
-    background-color: $lightgrey;
+    background-color: $lightergrey;
     .card-header {
         background-color: $darkgrey;
         text-align: center;
