--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -2,5 +2,7 @@ $fa-font-path: "/dist/fonts/font-awesome/";
 
 $darkgrey: #d0d0d0;
 $grey: #8a8989;
-$lightgrey: #f0f0f0;
+$lightgrey: #eeeeee;
+$lightergrey: #f0f0f0;
+
 $secondary: #246998;
