--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -7,7 +7,7 @@
     {% if urlIfAvailableInNewerVersion %}
         <link rel="canonical" href="https://{{ constant('DOCS_DOMAIN') }}{{ urlIfAvailableInNewerVersion }}">
     {% endif %}
-    <link href="/dist/css/style.css?{{ revision|e('html_attr') }}" rel="stylesheet">
+    <link href="/dist/css/style.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
