--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -12,9 +12,10 @@
 
         <div class="col-sm-8 col-md-9 documentation">
             {% if urlIfAvailableInNewerVersion %}
-                <a href="{{ urlIfAvailableInNewerVersion }}">Click here if you want to read this article for the latest Piwik version</a>
-                <br />
-                <br />
+                <div class="alert alert-warning" role="alert">
+                    <a class="alert-link" href="{{ urlIfAvailableInNewerVersion }}">Click here if you want to read this article for the
+                        latest Piwik version</a>
+                </div>
             {% endif %}
 
             {{ guide.renderedContent|raw }}
