--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -2,6 +2,7 @@ html {
     position: relative;
     min-height: 100%;
 }
+
 body {
     padding-top: 80px;
     margin-bottom: 80px;
@@ -9,60 +10,55 @@ body {
     font-size: 15px;
     color: #404040;
 }
+
 h1, h2, h3, h4, h5, h6 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
 }
+
 code, a > code {
     color: #A93552;
     background-color: #f5f5f5;
     border-radius: 0;
 }
+
 pre {
     border: none;
     padding: 0;
     margin: 15px 0;
+    > code {
+        padding: 20px 15px !important;
+        display: block;
+        /* HighlightJS theme shim to avoid flashing when the page is loaded */
+        color: #dcdcdc;
+        background-color: #3f3f3f;
+    }
 }
-pre > code {
-    padding: 20px 15px !important;
-    display: block;
-    /* HighlightJS theme shim to avoid flashing when the page is loaded */
-    color: #dcdcdc;
-    background-color: #3f3f3f;
-}
+
 p {
     margin: 0 0 15px;
 }
 
-/* Active navbar item color */
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
-    color: #2faadd;
-}
 .dropdown-menu > li > a {
     white-space: normal;
 }
-@media (min-width: 1200px) {
-    #quick-search-typeahead > input {
-        width:256px;
-    }
-}
 
 .parameter > *:first-child {
-    float:left;
-    margin:0 .5em 0 0;
+    float: left;
+    margin: 0 .5em 0 0;
 }
 
 .parameter > .param-desc {
-    overflow:hidden;
+    overflow: hidden;
 }
 
 h2[id]:before, h3[id]:before {
-  content:"";
-  display:block;
-  padding-top:60px;
-  margin-top:-60px;
+    content: "";
+    display: block;
+    padding-top: 60px;
+    margin-top: -60px;
 }
 
-/* reporting api listing styles */
+//reporting api listing styles
 .apiDescription, .apiMethod {
     margin: 0 0 10px;
 }
@@ -73,7 +69,7 @@ h2[id]:before, h3[id]:before {
 
 .apiMethod .example {
     margin-left: 5px;
-    color: #9E9E9E;
+    color: $grey;
 }
 
 footer {
@@ -87,7 +83,7 @@ footer {
     font-size: 14px;
 }
 
-/* Menu navbar */
+//Menu navbar
 nav {
     .navbar-brand {
         display: flex;
@@ -97,13 +93,14 @@ nav {
     }
 }
 
-/* Home page */
+//Home page
 .jumbotron {
     padding-top: 48px;
     padding-bottom: 48px;
     margin-top: -40px;
     margin-bottom: 0;
 }
+
 .jumbotron-categories {
     background: #0F3D57;
     padding: 50px 0;
@@ -111,14 +108,17 @@ nav {
     text-align: center;
     margin-bottom: 30px;
 }
+
 .jumbotron-categories h2 {
     font-size: 62px;
     line-height: 78px;
 }
+
 .jumbotron-categories p {
     font-weight: 300;
     font-size: 17px;
 }
+
 .jumbotron-categories li a {
     color: #91aabf;
 }
