manually apply changes from a3de287fa7ff8de8ab0504c31815122b9f757126

--- a/app/templates/left-menu.twig
+++ b/app/templates/left-menu.twig
@@ -28,7 +28,7 @@
 
                                 <ul class="nav">
                                     {% for subItem in item.subItems %}
-                                        {% set menuClass = (subItem.getMenuUrl in currentPath) ? 'active' : '' %}
+                                        {% set menuClass = (subItem.getMenuUrl == currentPath) ? 'active' : '' %}
                                         <li class="{{ menuClass }}" title="{{ subItem.title|striptags|raw }}">
                                             <a href="{{ subItem.menuUrl|completeUrl }}"> {{ subItem.menuTitle|raw }}</a>
                                         </li>
