Piwik is now Matomo on developer zone

--- a/app/templates/home.twig
+++ b/app/templates/home.twig
@@ -10,7 +10,7 @@
                 <span class="text-muted">|</span>
                 Innovate
             </h1>
-            <p>Welcome to the Piwik Developer Zone, the center of innovation in analytics.</p>
+            <p>Welcome to the Matomo Developer Zone (formerly Piwik), the center of innovation in analytics.</p>
         </div>
     </div>
 
@@ -22,10 +22,10 @@
                         <i class="fa fa-plug"></i> Integrate
                     </h2>
                     <p>
-                        Track your application or access <br/> Piwik data using the HTTP API.
+                        Track your application or access <br/> Matomo data using the HTTP API.
                     </p>
                     <p>
-                        <a class="btn btn-primary btn-lg" href="{{ '/integration'|completeUrl }}">Integrate Piwik</a>
+                        <a class="btn btn-primary btn-lg" href="{{ '/integration'|completeUrl }}">Integrate Matomo</a>
                     </p>
                 </div>
                 <div class="col-sm-6">
@@ -33,10 +33,10 @@
                         <i class="fa fa-code"></i> Develop
                     </h2>
                     <p>
-                        Extend and customize Piwik by <br/> contributing or developing plugins.
+                        Extend and customize Matomo by <br/> contributing or developing plugins.
                     </p>
                     <p>
-                        <a class="btn btn-primary btn-lg" href="{{ '/develop'|completeUrl }}">Develop Piwik &amp; Plugins</a>
+                        <a class="btn btn-primary btn-lg" href="{{ '/develop'|completeUrl }}">Develop Matomo Plugins</a>
                     </p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <span class="text-success">#</span>
                 <a href="{{ '/changelog'|completeUrl }}">Platform Changelog</a>
             </h2>
-            <p>What has changed in the latest Piwik versions for the developers.</p>
+            <p>What has changed in the latest Matomo (Piwik) versions for the developers.</p>
         </div>
 
         <div class="col-sm-6 col-md-4">
