--- a/app/templates/guide.twig
+++ b/app/templates/guide.twig
@@ -12,7 +12,7 @@
 
         <div class="col-sm-8 col-md-9 documentation">
             {% if urlIfAvailableInNewerVersion %}
-                <a href="{{ urlIfAvailableInNewerVersion }}">Click here if you want to read this article for the latest Piwik version</a>
+                <a href="{{ urlIfAvailableInNewerVersion }}">Click here if you want to read this article for the latest Matomo version</a>
                 <br />
                 <br />
             {% endif %}
