--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -17,6 +17,7 @@
     <script src="/js/html5shiv.3.7.0.js?{{ revision|e('html_attr') }}"></script>
     <script src="/js/respond.min.1.3.0.js?{{ revision|e('html_attr') }}"></script>
     <![endif]-->
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
