Add Privacy Policy link on each page

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -108,6 +108,9 @@
             <p class="pull-right">
                 <a href="mailto:developer@matomo.org?subject=Feedback%20Developer%20Guides">Give Feedback</a>{% if linkToEditDocument is defined and linkToEditDocument %}&nbsp;|&nbsp;{% endif %}
             </p>
+            <p class="pull-right">
+                <a href="https://matomo.org/privacy-policy" target="_blank">Privacy Policy</a>&nbsp;|&nbsp;
+            </p>
         </div>
     </footer>
 {% endblock %}
