--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -5,12 +5,22 @@ html {
 body {
     padding-top: 80px;
     margin-bottom: 80px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
     font-size: 15px;
     color: #404040;
 }
+@font-face {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-display: auto;
+    src: local('Nunito Bold'), local('Nunito-Bold'),
+    url('../fonts/nunito-v9-latin-ext-700.woff2') format('woff2'),
+    url('../fonts/nunito-v9-latin-ext-700.woff') format('woff');
+}
 h1, h2, h3, h4, h5, h6 {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: Nunito, Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
+    font-weight: 700;
 }
 code {
     color: #A93552;
