change some more colours and remove fonts again

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -9,7 +9,7 @@
     {% endif %}
     <link href="/css/bootstrap.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
     <link href="/css/font-awesome.min.css?{{ revision|e('html_attr') }}" rel="stylesheet">
-    <link href="/css/highlight.zenburn.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
+    <link href="/css/highlight.obsidian.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/app.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/sidebar.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
     <link href="/css/documentation.css?{{ revision|e('html_attr') }}" rel="stylesheet" media="screen">
